--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -2,21 +2,21 @@
 - /src/assets/.*
 - /src/environments/.*
 
-- */.editorconfig
-- */.gitignore
-- */angular.json
-- */package-lock.json
-- */package.json
-- */README.md
-- */tsconfig.json
-- */tslint.json
-- */yarn.lock
-- */src/browserslist
-- */src/favicon.ico
-- */src/karma.conf.js
-- */src/main.ts
-- */src/polyfills.ts
-- */src/test.ts
-- */src/tsconfig.app.json
-- */src/tsconfig.spec.json
-- */src/tslint.json
+- .*/.editorconfig
+- .*/.gitignore
+- .*/angular.json
+- .*/package-lock.json
+- .*/package.json
+- .*/README.md
+- .*/tsconfig.json
+- .*/tslint.json
+- .*/yarn.lock
+- .*/src/browserslist
+- .*/src/favicon.ico
+- .*/src/karma.conf.js
+- .*/src/main.ts
+- .*/src/polyfills.ts
+- .*/src/test.ts
+- .*/src/tsconfig.app.json
+- .*/src/tsconfig.spec.json
+- .*/src/tslint.json
